zipkin.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin
spec:
  ports:
  - port: 9411
    name: http
  type: LoadBalancer
  selector:
    app: zipkin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
      - name: zipkin
        image: openzipkin/zipkin
        ports:
          - containerPort: 9411
