store-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: store-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: store
spec:
  hosts:
  - "*"
  gateways:
  - store-gateway
  http:
  - match:
    - uri:
        prefix: /account-service/
    rewrite:
      uri: /
    route:
    - destination:
        host: account-service

  - match:
    - uri:
        prefix: /delivery-service/
    rewrite:
      uri: /
    route:
    - destination:
        host: delivery-service
        
  - match:
    - uri:
        prefix: /zipkin
    route:
    - destination:
        host: zipkin
